--- a/Proyecto_Web_Avanzado_Front/my-app/package.json
+++ b/Proyecto_Web_Avanzado_Front/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://localhost:3000/",
+  "proxy": "http://127.0.0.1:3000",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
